dark mode fix

--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,9 @@ body {
 }
 
 h1,
-p {
+p,
+li,
+ul {
   color: var(--text-color);
 }
 
